# migrant_lib

./: .gitignore  .migrant.toml  .travis.yml  CHANELOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Migrant.toml  README.md  test.sh
ci/: before_deploy.sh  script.sh
examples/: embedded_cli_compatible.rs  embedded_programmable.rs  migrant_cli_compatible.rs  settings_file_programmable.rs
src/: config.rs  connection.rs  errors.rs  lib.rs  migratable.rs  migration.rs  types.rs
src/drivers/: mod.rs  mysql.rs  pg.rs  sqlite.rs
