[package]
name = "migrant_lib"
version = "0.16.2"
authors = ["James Kominick <james.kominick@gmail.com>"]
description = "Database migration and configuration library for postgres, sqlite, mysql"
repository = "https://github.com/jaemk/migrant_lib"
keywords = ["database", "migration", "sql", "postgres", "sqlite", "mysql"]
categories = ["database", "development-tools"]
license = "MIT"
readme = "README.md"

exclude = [
    "/ci/*",
    "/db/*",
    "/migrations/*",
    "Migrant.toml",
    ".travis.yml",
]

[dependencies]
error-chain = "0.11"
chrono = "0.4"
lazy_static = "1"
regex = "0.2"
walkdir = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4"
percent-encoding = "1"
url = "1"
log = "0.4"
postgres = {version = "0.15", optional = true}
rusqlite = {version = "0.13", optional = true, features = ["bundled"] }
mysql = { version = "12", optional = true }

[features]
default = []
-sqlite = ["rusqlite"]
-postgres = ["postgres"]
-mysql = ["mysql"]
all = ["-sqlite", "-postgres", "-mysql"]

